# asterizm-contracts-sol

./: .gitignore  Anchor.toml  DOCS.md  README.md  package-lock.json  package.json  tsconfig.json
idls/: asterizm_client.json  asterizm_initializer.json  asterizm_native_token_example.json  asterizm_nft_example.json  asterizm_relayer.json  asterizm_token_example.json  asterizm_value_example.json
migrations/: deploy.ts
programs/asterizm-client/: Cargo.toml
programs/asterizm-client/src/: lib.rs
programs/asterizm-client/src/models/: client.rs  client_senders.rs  client_trusted_addresses.rs  message.rs  mod.rs  refund.rs  settings.rs
programs/asterizm-initializer/: Cargo.toml
programs/asterizm-initializer/src/: lib.rs
programs/asterizm-initializer/src/models/: blocked_account.rs  message.rs  mod.rs  settings.rs
programs/asterizm-token-example/: Cargo.toml
programs/asterizm-token-example/src/: lib.rs
scripts/: 31-client-fetch.ts  32-relayer-fetch.ts  pk-to-bytes.js
tests/: 01-asterizm-relayer-initialize.ts  02-asterizm-initializer-initialize.ts  03-asterizm-client-initialize.ts  04-asterizm-client-send-message.ts  05-asterizm-relayer-transfer.ts  06-asterizm-client-receive-message.ts  07-asterizm-token-example-initialize.ts  08-asterizm-relayer-transfer-token-example.ts  09-asterizm-token-example-receive.ts  10-asterizm-token-example-send.ts  11-asterizm-client-send-message-token-example.ts  12-asterizm-nft-example-initialize.ts  13-asterizm-relayer-transfer-nft-example.ts  14-asterizm-nft-example-receive.ts  15-asterizm-relayer-transfer-updated-nft-example.ts  16-asterizm-nft-example-receive-and-update.ts  17-asterizm-nft-example-burn.ts  18-asterizm-client-send-message-nft-example.ts  19-asterizm-client-create-client-value.ts  20-asterizm-relayer-transfer-value-example.ts  21-asterizm-value-example-receive.ts  22-asterizm-value-example-send.ts  23-asterizm-token-example-refund.ts  24-asterizm-native-token-example-initialize.ts  26-asterizm-native-token-example-receive.ts  (+4 more)
(+81 files in other folders)
