[package]
name = "asterizm-client"
version = "0.1.0"
description = "Asterizm client"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asterizm_client"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
# hex = "*"
