[package]
name = "asterizm-client"
version = "0.1.0"
description = "Asterizm client"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asterizm_client"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.32.1"
solana-program = "2.3.0"
 hex = "*"
 base64 = "*"
