[package]
name = "asterizm-initializer"
version = "0.1.0"
description = "Asterizm initializer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asterizm_initializer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.32.1"
